# google-calendar-mcp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/google_calendar_mcp/: __init__.py  config.py  google_api.py  maps.py  models.py  server.py
tests/: test_config.py  test_models.py
